# logicblocks

Controller/: .gitignore  Cargo.toml  TODO  clippy.toml  rustfmt.toml
Controller/examples/: devices_dahua_ipc.rs  devices_dahua_ipc_a.rs  devices_dahua_ipc_hdw4631c_a.rs  devices_eaton_mmax_a.rs  devices_hikvision_ds2cd2x32x_x.rs  devices_logicblocks_houseblocks_v1_avr_v1_runner.rs  devices_logicblocks_houseblocks_v1_tester.rs  devices_soft_surveillance_rtsp_recorder_hardware_channel.rs  devices_soft_surveillance_rtsp_recorder_hardware_recorder.rs
Controller/examples/devices_logicblocks_houseblocks_v1_tester/: d0002_reed_switch_v1.rs  d0003_junction_box_minimal_v1.rs  d0005_gpio_a_v1.rs  d0006_relay14_opto_a_v1.rs  d0007_relay14_ssr_a_v2.rs  main.rs
Controller/examples/devices_logicblocks_houseblocks_v1_tester/common/: mod.rs  relay14_common_a.rs
Controller/src/: app.rs  lib.rs  main.rs
Controller/src/application/: fs.rs  mod.rs  modules.rs  sqlite.rs
Controller/src/datatypes/: angle.rs  boolean.rs  color_rgb_boolean.rs  current.rs  duration.rs  flow_volumetric.rs  frequency.rs  geography.rs  ipc_rtsp_url.rs  mod.rs  multiplier.rs  pressure.rs  range.rs  ratio.rs  real.rs  resistance.rs  temperature.rs  time_duration.rs  void.rs  voltage.rs
Controller/src/datatypes/building/: window.rs
Controller/src/devices/: device.rs  device_event_stream.rs  gui_summary.rs  helpers.rs  mod.rs  pool.rs  runner.rs
Controller/src/devices/dahua/: mod.rs
Controller/src/devices/dahua/ipc/: api.rs  device.rs  events.rs  logic.rs  mod.rs  x_mixed_replace.rs
Controller/src/devices/dahua/ipc_a/: logic.rs
Controller/src/devices/dahua/ipc_hdw4631c_a/: logic.rs
Controller/src/devices/eaton/: mod.rs
Controller/src/devices/eaton/mmax_a/: hardware.rs  logic.rs
Controller/src/devices/hikvision/: mod.rs
Controller/src/devices/hikvision/ds2cd2x32x_x/: hardware.rs  logic.rs
Controller/src/devices/houseblocks/avr_v1/: d0002_reed_switch_v1.rs  d0003_junction_box_minimal_v1.rs  d0005_gpio_a_v1.rs  d0006_relay14_opto_a_v1.rs  d0007_relay14_ssr_a_v2.rs  logic.rs  mod.rs
Controller/src/devices/houseblocks/houseblocks_v1/: common.rs  master.rs  master_linux.rs  master_stub.rs
Controller/src/devices/logicblocks/: mod.rs
Controller/src/devices/logicblocks/avr_v1/: d0006_relay14_opto_a.rs  d0006_relay14_opto_a_v1.rs  d0007_relay14_ssr_a_v2.rs  device.rs  driver.rs  mod.rs  relay14_common.rs
Controller/src/devices/logicblocks/houseblocks/: mod.rs
Controller/src/devices/logicblocks/houseblocks_v1/: common.rs  master.rs  master_linux.rs  master_stub.rs  mod.rs
Controller/src/devices/soft/: boolean_invert.rs  button_a.rs  button_controller_a.rs  debug_event.rs  debug_state.rs  mod.rs  rst_a.rs  slope.rs  state_unwrap.rs
Controller/src/devices/soft/building/: mod.rs  window_open_state_open_closed_from_parts_a.rs  window_open_state_open_tilted_closed_from_parts_a.rs
Controller/src/devices/soft/calendar/: mod.rs  solar_position_a.rs
Controller/src/devices/soft/controller/: bang_bang_a.rs  mod.rs  pid_a.rs
Controller/src/devices/soft/converter/: boolean_to_ratio_a.rs  color_rgb_boolean_from_booleans_a.rs  mod.rs  multiplayer_to_ratio_clamp_a.rs  ratio_from_booleans_a.rs  real_from_state_a.rs  real_to_state_a.rs
Controller/src/devices/soft/debug/: log_event.rs  log_state.rs  mod.rs
Controller/src/devices/soft/ipc/: manager.rs  mod.rs  organizer.rs  recorder.rs  recorder_organizer.rs  snapshot.rs
Controller/src/devices/soft/logic/: mod.rs
Controller/src/devices/soft/math/: add_a.rs  mod.rs  mul_a.rs  polynomial_a.rs
Controller/src/devices/soft/surveillance/: mod.rs
Controller/src/devices/soft/time/: average_a.rs  boolean_change_delay_a.rs  direction_enable_a.rs  (+7 more)
Controller/src/devices_old/: mod.rs  pool.rs
Controller/src/gui/: dashboards.rs  fontawesome.rs  mod.rs
Controller/src/interfaces/: mod.rs
Controller/src/interfaces/modbus_rtu/: bus.rs  frame.rs  frames_public.rs  helpers.rs  mod.rs
Controller/src/interfaces/serial/: ftdi.rs  ftdi_linux.rs  ftdi_stub.rs  mod.rs
Controller/src/logic/: device.rs  device_provider.rs  device_provider_static.rs  device_providers.rs  mod.rs  runner.rs  signal_values.rs  signals_runner.rs
Controller/src/logic/devices/: mod.rs
Controller/src/logic/signal/: event_source.rs  event_target.rs  mod.rs  state_source.rs  state_target.rs
Controller/src/modules/: fs.rs  mod.rs  module_path.rs  sqlite.rs
Controller/src/modules/sqlite_migrations/: graph.rs  mod.rs
Controller/src/signals/: exchanger.rs  mod.rs  waker.rs
Controller/src/signals/exchange/: connections_map.rs  connections_requested.rs  connections_running.rs  exchanger.rs  mod.rs
Controller/src/signals/signal/: event_source.rs  event_target_last.rs  event_target_queued.rs  mod.rs  state_source.rs  state_target.rs  state_target_last.rs  state_target_queued.rs
Controller/src/signals/types/: event.rs  mod.rs  state.rs
Controller/src/signals/utils/: mod.rs  state_target_queued_stream.rs
Controller/src/stubs/: inotify.rs
Controller/src/util/: anyhow_multiple_error.rs  async_barrier.rs  async_flag.rs  async_util.rs  atomic_cell.rs  atomic_cell_erased.rs  borrowed_async.rs  bus.rs  bus2.rs  drop_guard.rs  erased_ref.rs  fs.rs  logging.rs  mod.rs  observable.rs  optional_async.rs  ready_chunks_dynamic.rs  ref_mut_async.rs  runnable.rs  runtime.rs  scoped_async.rs  select_all_empty.rs  sqlite_async.rs  tokio_cancelable.rs  waker_stream.rs
Controller/src/util/async_ext/: mod.rs  optional.rs  ready_chunks_dynamic.rs  select_all_or_pending.rs  stream_take_until_exhausted.rs
Controller/src/util/async_waker/: mod.rs  mpmc.rs  mpmc_static.rs  mpsc.rs
Controller/src/util/waker_stream/: mod.rs  mpmc.rs  mpmc_static.rs  mpsc.rs  mpsc_local.rs
Controller/src/util/web/: mod.rs  sse.rs
Controller/src/web/: hyper_body_variant.rs  mod.rs  root_service.rs  server.rs  sse.rs  sse_aggregated.rs  sse_topic.rs
Controller/src/web/router/: mod.rs  uri_cursor.rs
Controller/src/web/uri_cursor/: handler_async_bridge.rs  local_bridge.rs  map_router.rs  mod.rs  next_item_map.rs
(+351 files in other folders)
