[package]
name = "logicblocks-controller"
version = "0.1.0"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
publish = false
default-run = "logicblocks-controller"

[dependencies]
anyhow = "1.0.86"
array-init = "2.1.0"
arrayvec = "0.7.4"
async-trait = "0.1.80"
atomic_refcell = "0.1.13"
by_address = "1.2.1"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
crc = "3.2.1"
crossbeam = "0.8.4"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.11.0"
digest_auth = "0.3.1"
env_logger = "0.11.3"
erased-serde = "0.4.5"
form_urlencoded = "1.2.1"
futures = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
include_bytes_aligned = "0.1.3"
indoc = "2.0.5"
itertools = "0.13.0"
log = { version = "0.4.22", features = ["release_max_level_debug"] }
maplit = "1.0.2"
md-5 = "0.10.6"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
ouroboros = "0.18.4"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
percent-encoding = "2.3.1"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
rusqlite = { version = "0.32.1", features = ["bundled", "array"] }
scopeguard = "1.2.0"
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.120"
stable_deref_trait = "1.2.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = [
    "fs",
    "time",
    "io-util",
    "sync",
] }
tokio-util = "0.7.11"
web-static-pack = "0.5.0-beta.2"
xmltree = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11.0"
libc = "0.2.155"
libftdi1-sys = "1.1.3"
libusb-sys = "0.2.3"

[dev-dependencies]
approx = "0.5.1"

[features]
default = []

ci-packed-gui = []
ci = ["ci-packed-gui"]
